# naturalspeech3_facodec

./: ARCHITECTURE.md  CLAUDE.md  SETUP.md  pyproject.toml  test_japanese.py  test_tsukuyomi_english.py
